Closed
Bug 1019287
Opened 11 years ago
Closed 11 years ago
nsLineLayout fails to build if NOISY_BLOCKDIR_ALIGN is defined
Categories
(Core :: Layout: Block and Inline, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: sgbowen8, Assigned: sgbowen8)
Details
Attachments
(1 file)
|
1.16 KB,
patch
|
dholbert
:
review+
|
Details | Diff | Splinter Review |
STR:
1. Add "#define NOISY_BLOCKDIR_ALIGN" to the top of nsLineLayout.cpp
2. Try to build
Expected results:
No build error
Actual results:
{
0:11.04 In file included from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.h:20:0,
0:11.04 from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:11:
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineBox.h: In member function ‘void nsLineLayout::BlockDirAlignLine()’:
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineBox.h:584:24: error: ‘mozilla::LogicalRect nsLineBox::mBounds’ is private
0:11.04 mozilla::LogicalRect mBounds;
0:11.04 ^
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:1471:15: error: within this context
0:11.04 mLineBox->mBounds.IStart(lineWM), mLineBox->mBounds.BStart(lineWM),
0:11.04 ^
0:11.04 In file included from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.h:20:0,
0:11.04 from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:11:
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineBox.h:584:24: error: ‘mozilla::LogicalRect nsLineBox::mBounds’ is private
0:11.04 mozilla::LogicalRect mBounds;
0:11.04 ^
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:1471:49: error: within this context
0:11.04 mLineBox->mBounds.IStart(lineWM), mLineBox->mBounds.BStart(lineWM),
0:11.04 ^
0:11.04 In file included from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.h:20:0,
0:11.04 from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:11:
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineBox.h:584:24: error: ‘mozilla::LogicalRect nsLineBox::mBounds’ is private
0:11.04 mozilla::LogicalRect mBounds;
0:11.04 ^
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:1472:15: error: within this context
0:11.04 mLineBox->mBounds.ISize(lineWM), mLineBox->mBounds.BSize(lineWM),
0:11.04 ^
0:11.04 In file included from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.h:20:0,
0:11.04 from /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:11:
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineBox.h:584:24: error: ‘mozilla::LogicalRect nsLineBox::mBounds’ is private
0:11.04 mozilla::LogicalRect mBounds;
0:11.04 ^
0:11.04 /home/sgbowen/builds/mozilla-central/layout/generic/nsLineLayout.cpp:1472:48: error: within this context
0:11.04 mLineBox->mBounds.ISize(lineWM), mLineBox->mBounds.BSize(lineWM),
0:11.04 ^
0:11.21 In the directory /home/sgbowen/builds/obj/layout/generic
}
Attachment #8432873 -
Flags: review?(dholbert)
Comment 2•11 years ago
|
||
Comment on attachment 8432873 [details] [diff] [review]
Fix
r=me
Attachment #8432873 -
Flags: review?(dholbert) → review+
Keywords: checkin-needed
Summary: nsLIneLayout fails to build if NOISY_BLOCKDIR_ALIGN is defined → nsLineLayout fails to build if NOISY_BLOCKDIR_ALIGN is defined
Comment 3•11 years ago
|
||
Thanks for the patch, Susanna! One request, can we please get a Try run for this before pushing? Thanks :)
Keywords: checkin-needed
Comment 4•11 years ago
|
||
Ah, I forgot about that rule, yeah. I'll coordinate with Susanna over IRC to get a Try run for this.
(Technically, this is NPOTB since it's in a block of #ifdeffed-out code [which currently doesn't even compile, and which this patch changes to make compile], so it might be arguable that a Try run is unnecessary here. Still probably worth triggering one to get the hang of it, though.)
Comment 5•11 years ago
|
||
Actually, per IRC, sounds like we can skip the Try run since this is NPOTB (not part of the [default] build). Adding back checkin-needed.
Keywords: checkin-needed
Comment 6•11 years ago
|
||
Keywords: checkin-needed
Comment 7•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in
before you can comment on or make changes to this bug.
Description
•