Bug 1019287 - Use accessor instead of private variable in ifdef'ed logging code. r=dholbert